# template-api

./: Dockerfile  README.md  dist.env  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: main.py
src/api/auth/: __init__.py
src/api/responses/: __init__.py  generic.py  preferences.py  system.py  users.py
src/api/routers/: __init__.py  preferences.py  system.py  users.py
src/api/schema/: __init__.py  generic.py  preferences.py  users.py
src/api/services/: __init__.py  preferences.py  users.py
src/api/tasks/: __init__.py  users.py
src/config/: __init__.py  api.py  auth.py  databases.py
src/databases/migrations/: 2023_02_28_161155_create_users_table.py
src/databases/models/: __init__.py  preferences.py  users.py
src/databases/seeds/: users_table_seeder.py
